--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -467,22 +467,10 @@
         "\n",
         "trainer.fit(model, data_module)\n",
         "\n",
-        "#This will come later, this is how we will trach, final accuracy and how well our net performs\n",
-        "trainer.test(model, datamodule=data_module)\n",
-        "\n",
-        "print(model.correct_predictions)\n",
-        "if len(model.correct_predictions) > 45*3:\n",
-        "  print('DATA CORRUPTED RERUN CELL 2')\n",
-        "else:\n",
-        "  accuracy = 100 * float(sum(model.correct_predictions)) / len(model.correct_predictions)\n",
-        "  print(accuracy)\n",
-        "print(model.validation_accuracy[-1])\n",
         "\n",
         "#Plot Data\n",
         "plot_data(model.training_loss,model.validation_loss, 'Loss',save = [False, \"twitter_loss_20ksteps_\"+ str(i)+\"batch\"],show= True)\n",
-        "plot_data(model.training_accuracy,model.validation_accuracy, 'Accuracy',save = [False,\"twitter_acc_20ksteps_\"+ str(i)+\"batch\"],show = True)\n",
-        "\n",
-        "\n"
+        "plot_data(model.training_accuracy,model.validation_accuracy, 'Accuracy',save = [False,\"twitter_acc_20ksteps_\"+ str(i)+\"batch\"],show = True)"
       ],
       "execution_count": null,
       "outputs": []
@@ -504,17 +492,6 @@
         "\n",
         "  trainer.fit(model, data_module)\n",
         "\n",
-        "  #This will come later, this is how we will track, final accuracy and how well our net performs\n",
-        "  trainer.test(model, datamodule=data_module)\n",
-        "\n",
-        "  print(model.correct_predictions)\n",
-        "  if len(model.correct_predictions) > 45*3:\n",
-        "    print('DATA CORRUPTED RERUN CELL 2')\n",
-        "  else:\n",
-        "    accuracy = 100 * float(sum(model.correct_predictions)) / len(model.correct_predictions)\n",
-        "    print(accuracy)\n",
-        "  print(model.validation_accuracy[-1])\n",
-        "\n",
         "  #Plot Data\n",
         "  plot_data(model.training_loss,model.validation_loss, 'Loss', save= [False,\"twitter_loss_20ksteps_\"+ str(i)+\"batch\"], show = True)\n",
         "  plot_data(model.training_accuracy,model.validation_accuracy, 'Accuracy',save= [False,\"twitter_acc_20ksteps_\"+ str(i)+\"batch\"], show = True)"
@@ -529,109 +506,6 @@
       },
       "source": [
         "print(model.validation_accuracy[-10:])"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "BdwNiR5zDT6o"
-      },
-      "source": [
-        "### Multi Run Test (loops)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6zwmB47U5ZT_"
-      },
-      "source": [
-        "set_seeds()\n",
-        "\n",
-        "steps = [1000 + x*1000 for x in range(1,11)]\n",
-        "batches = [1,2,4,8,16,32,64,128,256,512]\n",
-        "\n",
-        "acc = np.zeros([len(steps),len(batches)])\n",
-        "for b in range(len(batches)):\n",
-        "  for s in range(len(steps)):\n",
-        "    model = nflStatsModule(batches[b])\n",
-        "\n",
-        "    trainer = pl.Trainer(gpus = 1, deterministic=True, progress_bar_refresh_rate=0,max_steps=steps[s],max_epochs = 2000) #,limit_val_batches=0.125) #Limit val batches\n",
-        "\n",
-        "    data_path = ['/content/drive/MyDrive/Deep Learning Final Project/Data/2010_examples.csv','/content/drive/MyDrive/Deep Learning Final Project/Data/2011_examples.csv','/content/drive/MyDrive/Deep Learning Final Project/Data/2012_examples.csv']\n",
-        "    data_module = nflStatsDataModule(model.batch_size, data_path, array = True)\n",
-        "\n",
-        "    trainer.fit(model, data_module)\n",
-        "\n",
-        "    #This will come later, this is how we will trach, final accuracy and how well our net performs\n",
-        "    trainer.test(model, datamodule=data_module)\n",
-        "    accuracy = 100 * float(sum(model.correct_predictions)) / len(model.correct_predictions)\n",
-        "    acc[s][b] = accuracy"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9mgT90z5L4Q9"
-      },
-      "source": [
-        "acc_t = [[55.55555556, 57.03703704, 59.25925926, 59.25925926, 57.03703704,\n",
-        "        46.66666667, 60.        , 54.81481481, 62.22222222, 54.07407407],\n",
-        "       [52.59259259, 58.51851852, 63.7037037 , 53.33333333, 57.03703704,\n",
-        "        51.11111111, 54.07407407, 63.7037037 , 51.85185185, 58.51851852],\n",
-        "       [54.07407407, 60.        , 52.59259259, 57.03703704, 54.07407407,\n",
-        "        55.55555556, 60.        , 59.25925926, 57.03703704, 61.48148148],\n",
-        "       [50.37037037, 57.03703704, 57.77777778, 51.11111111, 60.74074074,\n",
-        "        63.7037037 , 56.2962963 , 51.11111111, 68.14814815, 51.85185185],\n",
-        "       [54.07407407, 54.07407407, 49.62962963, 55.55555556, 46.66666667,\n",
-        "        45.18518519, 50.37037037, 54.07407407, 60.74074074, 62.96296296],\n",
-        "       [57.77777778, 54.07407407, 51.85185185, 59.25925926, 53.33333333,\n",
-        "        57.77777778, 65.92592593, 54.07407407, 56.2962963 , 43.7037037 ],\n",
-        "       [52.59259259, 54.07407407, 56.2962963 , 48.88888889, 60.        ,\n",
-        "        54.81481481, 57.03703704, 56.2962963 , 57.77777778, 64.44444444],\n",
-        "       [59.25925926, 55.55555556, 55.55555556, 68.88888889, 54.81481481,\n",
-        "        60.        , 54.07407407, 57.03703704, 54.81481481, 63.7037037 ],\n",
-        "       [53.33333333, 52.59259259, 58.51851852, 54.81481481, 53.33333333,\n",
-        "        61.48148148, 54.07407407, 65.18518519, 56.2962963 , 60.        ],\n",
-        "       [55.55555556, 58.51851852, 53.33333333, 48.88888889, 60.        ,\n",
-        "        62.96296296, 51.85185185, 61.48148148, 57.77777778, 57.77777778]]\n",
-        "\n",
-        "        "
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "S0BNZUgU8plT"
-      },
-      "source": [
-        "set_seeds()\n",
-        "\n",
-        "steps = [1000 + x*1000 for x in range(1,11)]\n",
-        "batches = [1,2,4,8,16,32,64,128,256,512]\n",
-        "\n",
-        "acc_t = np.zeros([len(steps),len(batches)])\n",
-        "for b in range(len(batches)):\n",
-        "  for s in range(len(steps)):\n",
-        "    model = nflStatsModule(batches[b],twitter = True)\n",
-        "\n",
-        "    trainer = pl.Trainer(gpus = 1, deterministic=True, progress_bar_refresh_rate=0,max_steps=steps[s],max_epochs = 2000) #,limit_val_batches=0.125) #Limit val batches\n",
-        "\n",
-        "    data_path = '/content/drive/MyDrive/Deep Learning Final Project/Data/all_years_twitter.csv'\n",
-        "    data_module = nflStatsDataModule(model.batch_size, data_path)\n",
-        "\n",
-        "    trainer.fit(model, data_module)\n",
-        "\n",
-        "    #This will come later, this is how we will trach, final accuracy and how well our net performs\n",
-        "    trainer.test(model, datamodule=data_module)\n",
-        "    accuracy = 100 * float(sum(model.correct_predictions)) / len(model.correct_predictions)\n",
-        "    acc_t[s][b] = accuracy"
       ],
       "execution_count": null,
       "outputs": []
